k8s/analytics-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics-service
  namespace: multi-talent-saas
  labels:
    app: analytics-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: analytics-service
  template:
    metadata:
      labels:
        app: analytics-service
    spec:
      containers:
        - name: analytics-service
          image: jayantmule02/analytics-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8086
          resources:
            requests: { cpu: "150m", memory: "384Mi" }
            limits: { cpu: "600m", memory: "768Mi" }
          readinessProbe:
            httpGet: { path: /actuator/health/readiness, port: 8086 }
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet: { path: /actuator/health/liveness, port: 8086 }
            initialDelaySeconds: 45
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: analytics-service
  namespace: multi-talent-saas
spec:
  selector:
    app: analytics-service
  ports:
    - port: 8086
      targetPort: 8086
  type: ClusterIP
