k8s/audit-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audit-service
  namespace: multi-talent-saas
  labels:
    app: audit-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: audit-service
  template:
    metadata:
      labels:
        app: audit-service
    spec:
      containers:
        - name: audit-service

          image: jayantmule02/audit-service:a51ee5ca8fa691c9a2cfe221ba8967b06094fd10
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8085
          resources:
            requests: { cpu: "150m", memory: "384Mi" }
            limits: { cpu: "600m", memory: "768Mi" }
          readinessProbe:
            httpGet: { path: /actuator/health/readiness, port: 8085 }
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet: { path: /actuator/health/liveness, port: 8085 }
            initialDelaySeconds: 45
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: audit-service
  namespace: multi-talent-saas
spec:
  selector:
    app: audit-service
  ports:
    - port: 8085
      targetPort: 8085
  type: ClusterIP
