k8s/project-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-service
  namespace: multi-talent-saas
  labels:
    app: project-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: project-service
  template:
    metadata:
      labels:
        app: project-service
    spec:
      containers:
        - name: project-service
          image: jayantmule02/project-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8083
          resources:
            requests: { cpu: "200m", memory: "384Mi" }
            limits: { cpu: "750m", memory: "768Mi" }
          readinessProbe:
            httpGet: { path: /actuator/health/readiness, port: 8083 }
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet: { path: /actuator/health/liveness, port: 8083 }
            initialDelaySeconds: 45
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: project-service
  namespace: multi-talent-saas
spec:
  selector:
    app: project-service
  ports:
    - port: 8083
      targetPort: 8083
  type: ClusterIP
