k8s/tenant-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tenant-service
  namespace: multi-talent-saas
  labels:
    app: tenant-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tenant-service
  template:
    metadata:
      labels:
        app: tenant-service
    spec:
      containers:
        - name: tenant-service
          image: jayantmule02/tenant-service:a51ee5ca8fa691c9a2cfe221ba8967b06094fd10
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8082
          resources:
            requests: { cpu: "200m", memory: "384Mi" }
            limits: { cpu: "750m", memory: "768Mi" }
          readinessProbe:
            httpGet: { path: /actuator/health/readiness, port: 8082 }
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet: { path: /actuator/health/liveness, port: 8082 }
            initialDelaySeconds: 45
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: tenant-service
  namespace: multi-talent-saas
spec:
  selector:
    app: tenant-service
  ports:
    - port: 8082
      targetPort: 8082
  type: ClusterIP
